Changed chat page to index. Fixed functionality and made it work in the chat window.

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,3 +11,8 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Changes the initial message of the Bot
+  steps:
+  - intent: get_started
+  - action: utter_greet
