--- a/config.yml
+++ b/config.yml
@@ -48,3 +48,10 @@ policies: null
 #     max_history: 5
 #     epochs: 100
 #     constrain_similarities: true
+
+action_server:
+  url: "http://localhost:5055/webhook"
+
+endpoints:
+  action_endpoint:
+    url: "http://localhost:5055/webhook"
