--- a/config.yml
+++ b/config.yml
@@ -1,53 +1,74 @@
-# The config recipe.
-# https://rasa.com/docs/rasa/model-configuration/
 recipe: default.v1
-
-# The assistant project unique identifier
-# This default value must be replaced with a unique assistant name within your deployment
-assistant_id: 20230813-195604-relaxed-rabbit
-
-# Configuration for Rasa NLU.
-# https://rasa.com/docs/rasa/nlu/components/
+assistant_id: medical-assistant-2024
 language: en
 
-pipeline: null
-# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
-# # If you'd like to customize it, uncomment and adjust the pipeline.
-# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
-#   - name: WhitespaceTokenizer
-#   - name: RegexFeaturizer
-#   - name: LexicalSyntacticFeaturizer
-#   - name: CountVectorsFeaturizer
-#   - name: CountVectorsFeaturizer
-#     analyzer: char_wb
-#     min_ngram: 1
-#     max_ngram: 4
-#   - name: DIETClassifier
-#     epochs: 100
-#     constrain_similarities: true
-#   - name: EntitySynonymMapper
-#   - name: ResponseSelector
-#     epochs: 100
-#     constrain_similarities: true
-#   - name: FallbackClassifier
-#     threshold: 0.3
-#     ambiguity_threshold: 0.1
+pipeline:
+  # Basic text processing
+  - name: WhitespaceTokenizer
 
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
-policies: null
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: RulePolicy
-#   - name: UnexpecTEDIntentPolicy
-#     max_history: 5
-#     epochs: 100
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
-#     constrain_similarities: true
+  # Language model for medical terms understanding
+  - name: LanguageModelFeaturizer
+    model_name: "bert"
+    model_weights: "bert-base-uncased"
+    cache_dir: "./cache"
+
+  # Feature extraction
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+
+  # Vector features for medical terms
+  - name: CountVectorsFeaturizer
+    analyzer: word
+    min_ngram: 1
+    max_ngram: 3
+
+  # Character level features (good for medical terms)
+  - name: CountVectorsFeaturizer
+    analyzer: char_wb
+    min_ngram: 2
+    max_ngram: 4
+
+  # Intent and entity classification
+  - name: DIETClassifier
+    epochs: 150
+    constrain_similarities: true
+    batch_size: 128
+    use_text_for_featurization: true
+    evaluate_every_number_of_epochs: 10
+    learning_rate: 0.001
+
+  - name: EntitySynonymMapper
+
+  - name: ResponseSelector
+    epochs: 150
+    constrain_similarities: true
+    batch_size: 128
+    evaluate_every_number_of_epochs: 10
+    learning_rate: 0.001
+
+  # Higher threshold for medical domain accuracy
+  - name: FallbackClassifier
+    threshold: 0.65
+    ambiguity_threshold: 0.15
+
+policies:
+  - name: MemoizationPolicy
+    max_history: 8
+
+  - name: RulePolicy
+    core_fallback_threshold: 0.3
+    core_fallback_action_name: "action_default_fallback"
+    enable_fallback_prediction: true
+
+  # Removed UnexpecTEDIntentPolicy as it's better for larger datasets
+
+  - name: TEDPolicy
+    max_history: 8
+    epochs: 150
+    batch_size: 128
+    learning_rate: 0.001
+    constrain_similarities: true
+    evaluate_every_number_of_epochs: 10
 
 action_server:
   url: "http://localhost:5055/webhook"
