--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,42 +1,3 @@
 version: "3.1"
 
-stories:
-
-#- story: happy path
-#  steps:
-#  - intent: greet_intent
-#  - action: utter_greet
-#  - intent: mood_great_intent
-#  - action: utter_happy
-#
-#- story: sad path 1
-#  steps:
-#  - intent: greet_intent
-#  - action: utter_greet
-#  - intent: mood_unhappy_intent
-#  - action: utter_cheer_up
-#  - action: utter_did_that_help
-#  - intent: affirm_intent
-#  - action: utter_happy
-#
-#- story: sad path 2
-#  steps:
-#  - intent: greet_intent
-#  - action: utter_greet
-#  - intent: mood_unhappy_intent
-#  - action: utter_cheer_up
-#  - action: utter_did_that_help
-#  - intent: deny_intent
-#  - action: utter_goodbye
-#
-#
-#- story: what are you scenario
-#  steps:
-#  - intent: what_are_you_intent
-#  - action: utter_what_are_you
-
-#- story: greet the user
-#  steps:
-#  - intent: get_started_intent
-#  - action: action_greet_user
-
+stories: []
