--- a/domain.yml
+++ b/domain.yml
@@ -3,43 +3,20 @@ version: "3.1"
 intents:
   - greet_intent
   - goodbye_intent
-  - affirm_intent
-  - deny_intent
-  - mood_great_intent
-  - mood_unhappy_intent
   - bot_challenge_intent
-  - what_are_you_intent
   - get_started_intent
-  - trigger_action_intent
 
 responses:
   utter_greet:
-  - text: "How can I help you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
+    - text: "How can I help you?"
 
   utter_goodbye:
-  - text: "Bye"
+    - text: "Goodbye! Have a great day!"
 
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
-
-  utter_what_are_you:
-  - text: "I am a medical assistant bot!"
-
-
-entities:
-  - medical_term
+    - text: "I am a medical assistant bot, powered by Rasa."
 
 actions:
-  - utter_what_are_you
   - action_greet_user
 
 session_config:
