--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,3 +1,17 @@
 version: "3.1"
 
-stories: []
+stories:
+  - story: Ask for working hours
+    steps:
+      - intent: ask_working_hours_intent
+      - action: utter_working_hours
+
+  - story: Ask for location
+    steps:
+      - intent: ask_location_intent
+      - action: utter_location
+
+  - story: Ask about services
+    steps:
+      - intent: ask_services_intent
+      - action: utter_services
