--- a/domain.yml
+++ b/domain.yml
@@ -7,6 +7,10 @@ intents:
   - get_started_intent
   - out_of_scope_intent
   - thanks_intent
+  - ask_working_hours_intent
+  - ask_location_intent
+  - ask_services_intent
+
 
 responses:
   utter_greet:
@@ -22,8 +26,16 @@ responses:
     - text: "I'm sorry, I didn't understand that. I'm here to help with medical questions and health advice."
 
   utter_thanks:
-      - text: "You're welcome! Let me know if there's anything else I can help with."
+    - text: "You're welcome! Let me know if there's anything else I can help with."
 
+  utter_working_hours:
+    - text: "Our working hours are Monday to Friday, 9:00 AM to 6:00 PM. We are closed on weekends."
+
+  utter_location:
+    - text: "Our clinic is located at 123 Health Street, Medical City. Feel free to visit us or call for directions!"
+
+  utter_services:
+      - text: "We offer general check-ups, diagnostic services, specialist consultations, and vaccinations. Let us know how we can help!"
 
 actions:
   - action_greet_user
