Add a fallback mechanism and intent

--- a/domain.yml
+++ b/domain.yml
@@ -5,7 +5,7 @@ intents:
   - goodbye_intent
   - bot_challenge_intent
   - get_started_intent
-  - out_of_scope_intent
+  - nlu_fallback
   - thanks_intent
   - ask_working_hours_intent
   - ask_location_intent
@@ -22,8 +22,8 @@ responses:
   utter_iamabot:
     - text: "I am a medical assistant bot, powered by Rasa."
 
-  utter_out_of_scope:
-    - text: "I'm sorry, I didn't understand that. I'm here to help with medical questions and health advice."
+  utter_default:
+      - text: "I'm sorry, I didn't understand that. Could you please rephrase?"
 
   utter_thanks:
     - text: "You're welcome! Let me know if there's anything else I can help with."
@@ -39,6 +39,7 @@ responses:
 
 actions:
   - action_greet_user
+
 
 session_config:
   session_expiration_time: 60
