--- a/data/rules.yml
+++ b/data/rules.yml
@@ -22,10 +22,11 @@ rules:
     - intent: get_started_intent
     - action: action_greet_user
 
-- rule: Handle out-of-scope messages
+- rule: Fallback rule
   steps:
-    - intent: out_of_scope_intent
-    - action: utter_out_of_scope
+    - intent: nlu_fallback
+    - action: utter_default
+
 
 - rule: Respond to thanks
   steps:
