--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -49,3 +49,9 @@ nlu:
     - What services do you provide?
     - What kind of treatments do you offer?
     - Can you tell me about your services?
+
+- intent: fetch_users
+  examples: |
+    - Show me all users
+    - Fetch users from the database
+    - Can you list all users?
