Customise bot greet based on the logged status of user

--- a/credentials.yml
+++ b/credentials.yml
@@ -21,6 +21,7 @@ socketio:
   user_message_evt: user_uttered
   bot_message_evt: bot_uttered
   session_persistence: false
+  metadata: true
 
 #mattermost:
 #  url: "https://<mattermost instance>/api/v4"
