--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,87 +1,161 @@
 version: "3.1"
 
 nlu:
-- intent: greet_intent
-  examples: |
-    - hey
-    - hello
-    - hi
+  - intent: greet_intent
+    examples: |
+      - hey
+      - hello
+      - hi
 
-- intent: goodbye_intent
-  examples: |
-    - bye
-    - goodbye
-    - see you later
+  - intent: goodbye_intent
+    examples: |
+      - bye
+      - goodbye
+      - see you later
 
-- intent: bot_challenge_intent
-  examples: |
-    - What are you?
-    - What is your purpose?
-    - Am I talking to a bot?
+  - intent: bot_challenge_intent
+    examples: |
+      - What are you?
+      - What is your purpose?
+      - Am I talking to a bot?
 
-- intent: get_started_intent
-  examples: |
-    - Let's get started
-    - Start the conversation
-    - Begin the chat
+  - intent: get_started_intent
+    examples: |
+      - Let's get started
+      - Start the conversation
+      - Begin the chat
 
+  - intent: thanks_intent
+    examples: |
+      - Thanks
+      - Thanks a lot
+      - Cheers
 
-- intent: thanks_intent
-  examples: |
-    - Thanks
-    - Thanks a lot
-    - Cheers
+  - intent: ask_location_intent
+    examples: |
+      - What is your address?
+      - Can you tell me your location?
+      - How can I find the clinic?
 
-- intent: ask_location_intent
-  examples: |
-    - What is your address?
-    - Can you tell me your location?
-    - How can I find the clinic?
+  - intent: ask_working_hours_intent
+    examples: |
+      - What are your working hours?
+      - When are you open?
+      - Are you open on weekends?
 
-- intent: ask_working_hours_intent
-  examples: |
-    - What are your working hours?
-    - When are you open?
-    - Are you open on weekends?
+  - intent: ask_services_intent
+    examples: |
+      - What services do you provide?
+      - What kind of treatments do you offer?
+      - Can you tell me about your services?
+      - What procedures do you perform?
+      - What treatments are available?
 
-- intent: ask_services_intent
-  examples: |
-    - What services do you provide?
-    - What kind of treatments do you offer?
-    - Can you tell me about your services?
-    - What procedures do you perform?
-    - What treatments are available?
+  - intent: list_doctors
+    examples: |
+      - Show me all doctors
+      - List the doctors
+      - Who are the doctors?
+      - Can I see the full doctor list?
+      - Give me the doctor list
+      - Display all available doctors
+      - I'd like to see all your doctors
 
-- intent: list_doctors
-  examples: |
-    - Show me all doctors
-    - List the doctors
-    - Who are the doctors?
+  - intent: ask_contact_intent
+    examples: |
+      - What's your phone number?
+      - How can I call you?
+      - What's your contact number?
+      - Can I get your email?
+      - Email
+      - Phone
+      - Call
+      - Contact info
+      - Give me your number
+      - Tell me your email
 
-- intent: ask_contact_intent
-  examples: |
-    - What's your phone number?
-    - How can I call you?
-    - What's your contact number?
-    - Can I get your email?
-    - Email
-    - Phone
-    - Call
-    - Contact info
-    - Give me your number
-    - Tell me your email
+  - intent: ask_parking_intent
+    examples: |
+      - Is parking available?
+      - Where can I park?
+      - Do you have parking spaces?
+      - Is there free parking?
 
-- intent: ask_parking_intent
-  examples: |
-    - Is parking available?
-    - Where can I park?
-    - Do you have parking spaces?
-    - Is there free parking?
+  - intent: ask_insurance_intent
+    examples: |
+      - Do you accept insurance?
+      - What insurance do you take?
+      - Can I use my health insurance?
+      - Which insurance plans do you accept?
+      - Insurance
 
-- intent: ask_insurance_intent
-  examples: |
-    - Do you accept insurance?
-    - What insurance do you take?
-    - Can I use my health insurance?
-    - Which insurance plans do you accept?
-    - Insurance
+  - intent: report_symptom_intent
+    examples: |
+      - I have chest pain
+      - I'm feeling dizzy
+      - My heart is beating fast
+      - I feel pressure in my chest
+      - I feel lightheaded
+      - My legs are swollen
+
+  - intent: affirm
+    examples: |
+      - Yes
+      - Sure
+      - Please do
+      - Ok
+      - That sounds good
+
+  - intent: ask_doctors_by_specialty
+    examples: |
+      - I want to see an [Adult Cardiology](specialty) doctor
+      - Show me [Adult Cardiology](specialty) doctors
+      - I need a [Pediatric Cardiology](specialty) doctor
+      - Do you have [Cardiovascular Surgery](specialty) doctors?
+      - I want a doctor specialized in [Adult Cardiology](specialty)
+      - I am looking for a [Pediatric Cardiology](specialty) specialist
+      - I need surgery for a heart condition
+      - [Adult Cardiology](specialty)
+      - [Pediatric Cardiology](specialty)
+      - [Cardiovascular Surgery](specialty)
+      - [Adult](specialty)
+      - [Pediatric](specialty)
+      - [Cardiovascular](specialty)
+      - [adult](specialty)
+      - [pediatric](specialty)
+      - [cardiovascular](specialty)
+      - [Adult Cardiologists](specialty)
+      - [Pediatric Cardiologists](specialty)
+      - [Cardiovascular Surgeons](specialty)
+      - I need to see an [adult cardiologist](specialty)
+      - Show me [adult cardiologist](specialty)
+      - [Adult cardiologist](specialty)
+      - [adult cardiologist](specialty)
+      - [Adult Cardiologist](specialty)
+      - [adult cardiologists](specialty)
+      - [pediatric cardiologist](specialty)
+      - [Pediatric cardiologist](specialty)
+      - [pediatric cardiologists](specialty)
+      - [Pediatric Cardiologist](specialty)
+      - [cardiovascular surgeon](specialty)
+      - [Cardiovascular surgeon](specialty)
+      - [cardiovascular surgeons](specialty)
+      - [Cardiovascular Surgeon](specialty)
+      - Show me doctors for [adult](specialty)
+      - I need a [pediatric specialist](specialty)
+
+  - intent: emergency_intent
+    examples: |
+      - I'm having a heart attack
+      - I can't breathe
+      - My chest hurts badly
+      - Severe chest pain
+      - I feel like fainting
+      - I think I'm having a stroke
+      - Emergency
+
+  - intent: fetch_users
+    examples: |
+      - Fetch users
+      - Show me the user list
+      - Get users from database
