--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,68 +1,79 @@
 version: "3.1"
 
 rules:
+  - rule: Greet the user when they say hello
+    steps:
+      - intent: greet_intent
+      - action: utter_greet
 
-- rule: Greet the user when they say hello
-  steps:
-    - intent: greet_intent
-    - action: utter_greet
+  - rule: Say goodbye anytime the user says goodbye
+    steps:
+      - intent: goodbye_intent
+      - action: utter_goodbye
 
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-    - intent: goodbye_intent
-    - action: utter_goodbye
+  - rule: Say 'I am a bot' anytime the user challenges
+    steps:
+      - intent: bot_challenge_intent
+      - action: utter_iamabot
 
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-    - intent: bot_challenge_intent
-    - action: utter_iamabot
+  - rule: Changes the initial message of the Bot
+    steps:
+      - intent: get_started_intent
+      - action: action_greet_user
 
-- rule: Changes the initial message of the Bot
-  steps:
-    - intent: get_started_intent
-    - action: action_greet_user
+  - rule: Fallback rule
+    steps:
+      - intent: nlu_fallback
+      - action: utter_default
 
-- rule: Fallback rule
-  steps:
-    - intent: nlu_fallback
-    - action: utter_default
+  - rule: Respond to thanks
+    steps:
+      - intent: thanks_intent
+      - action: utter_thanks
 
-- rule: Respond to thanks
-  steps:
-    - intent: thanks_intent
-    - action: utter_thanks
+  - rule: Provide contact information
+    steps:
+      - intent: ask_contact_intent
+      - action: utter_contact
 
-- rule: Provide contact information
-  steps:
-    - intent: ask_contact_intent
-    - action: utter_contact
+  - rule: Provide parking information
+    steps:
+      - intent: ask_parking_intent
+      - action: utter_parking
 
-- rule: Provide parking information
-  steps:
-    - intent: ask_parking_intent
-    - action: utter_parking
+  - rule: Provide insurance information
+    steps:
+      - intent: ask_insurance_intent
+      - action: utter_insurance
 
-- rule: Provide insurance information
-  steps:
-    - intent: ask_insurance_intent
-    - action: utter_insurance
+  - rule: Provide working hours
+    steps:
+      - intent: ask_working_hours_intent
+      - action: utter_working_hours
 
-- rule: Provide working hours
-  steps:
-    - intent: ask_working_hours_intent
-    - action: utter_working_hours
+  - rule: Provide clinic location
+    steps:
+      - intent: ask_location_intent
+      - action: utter_location
 
-- rule: Provide clinic location
-  steps:
-    - intent: ask_location_intent
-    - action: utter_location
+  - rule: Provide available services
+    steps:
+      - intent: ask_services_intent
+      - action: utter_services
 
-- rule: Provide available services
-  steps:
-    - intent: ask_services_intent
-    - action: utter_services
+  - rule: List all doctors
+    steps:
+      - intent: list_doctors
+      - action: action_list_doctors
 
-- rule: List all doctors
-  steps:
-    - intent: list_doctors
-    - action: action_list_doctors
+  - rule: Handle emergency situations (override all)
+    condition:
+      - active_loop: null
+    steps:
+      - intent: emergency_intent
+      - action: utter_emergency
+
+  - rule: User agrees to proceed
+    steps:
+      - intent: affirm
+      - action: utter_list_specialists
